compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1453
expression: "\npub type Media {\n    Audio(BitString)\n    Video(BitString)\n    Text(String)\n}\npub fn main(m) {\n    let Video(_) = m\n    Nil\n}\n"
---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:8:5
  │
8 │     let Video(_) = m
  │     ^^^^^^^^^^^^^^^^

This assignment does not match all possibilities.
Either use a case expression with patterns for each possible
value, or use `let assert` rather than `let`.

These values are not matched:

  - Audio
  - Text


